@@ -84,9 +84,9 @@ SuSE)
 	EXTRA_CXXFLAGS="-fopenmp"
 	;;
 Darwin)
-	if [ -d /Applications/Qt5/Qt5.15/5.15.0/clang_64/bin ]
+	if [ -d /Applications/Qt5/Qt5.15/5.15.2/clang_64/bin ]
 	then
-		PATH=${PATH}:/Applications/Qt5/Qt5.15/5.15.0/clang_64/bin
+		PATH=${PATH}:/Applications/Qt5/Qt5.15/5.15.2/clang_64/bin
 		export PATH
 	elif [ -d /Applications/Qt5/Qt5.14/5.14.0/clang_64/bin ]
 	then
